# cpp_red

./: .gitignore  CMakeLists.txt
.github/workflows/: .build_cmake.yml
headers/: test_runner.h
w1/: bad_macros.cpp  deque.cpp  paginator.cpp  sort_by.cpp  unique_macros.cpp  update_field.cpp
w2/: booking.cpp  fast.cpp  learner.cpp
w3/: airport_counter.cpp  linked_list.cpp  merge_sort_3.cpp  my_swap.cpp  object_pool.cpp  priority_collection_2.cpp  simple_vector.h  sportsmen.cpp  stack_vector.h  string_set.cpp  swap_sort_copy.cpp  text_editor.cpp
w3/server_stats/: http_request.h  stats.cpp  stats.h  stats_tests.cpp
w4/: concurrent_map.cpp  explore_key_words.cpp  joseph_counter.cpp  matrix_sum.cpp  paginator.h  string_grouping.cpp  synchronized.cpp  token_split.cpp
