cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_STANDARD 17)

project(w1)
include_directories(test_framework/)
#add_executable(log w1/logger.cpp)
add_executable(ticket w1/sort_by.cpp)
add_executable(update_field w1/update_field.cpp)
add_executable(bad_macros w1/bad_macros.cpp)
add_executable(deque w1/deque.cpp)
add_executable(paginator w1/paginator.cpp)

project(w2)
add_executable(sort_students w2/sort_students.cpp)
add_executable(learner w2/learner.cpp)
add_executable(books_slow w2/slow.cpp)
add_executable(books_fast w2/fast.cpp)

project(w3)
add_executable(object_pool w3/object_pool.cpp)
add_executable(swap_reverse_copy w3/swap_sort_copy.cpp)
add_executable(simple_vector w3/simple_vector.cpp)
add_executable(linked_list w3/linked_list.cpp)
add_executable(string_set w3/string_set.cpp)
add_executable(sportsmen w3/sportsmen.cpp)
